# DELFIN

./: .gitignore  CHANGELOG.md  CITATION.cff  ESD_MODULE_README.md  LEGAL.md  LICENSE_GUARD.md  MANIFEST.in  OPTIMIZATION_BACKLOG.md  README.md  antwort_jerome.txt  check_handler.py  delfin_dashboard.ipynb  delfin_stop.sh  generate_tree_settings.py  kill_delfin.sh  own_auto_tree.json  pyproject.toml  simple_ctrlc_test.py  test_ctrl_c.py  test_delfin_ctrlc.sh  test_pool_scheduling.py  test_progressive_from.py  test_real_ctrlc.py  test_signal.py  test_tmux_signal.sh  tmp.docx
.github/workflows/: ci.yml
delfin/: __init__.py  _arom_planarize.py  _aromatic_ring_flattener.py  _bond_decollapse.py  _burnside_groups.py  _chirality_enumerator.py  _cluster_scaffold.py  _conformer_pool.py  _conformer_rank.py  _coord_angle_corrector.py  _cp_piano_stool.py  _deep_enumerator.py  _donor_orientation_realism.py  _donor_rotation.py  _e6761e4_soft_donor.py  _energy_terms.py  _ensemble_dispatch.py  _fix_hydroxyl_geometry.py  _fix_sp2n_planarize.py  _fix_sp3_h_tetrahedrality.py  _fix_sp3_n_pyramidality.py  _fix_wuxqak_sp3_c_linear.py  _h_vsepr_realism.py  _hapto_diversity.py  _hapto_final_clearance.py  _hapto_rigid_v2.py  _mace_refiner.py  _multiarm_coplanar.py  _pi_coplanar_final.py  _pi_coplanar_m.py  _pi_h_projector.py  _point_group_ops.py  _polya_groups.py  _polyhedron_targets.py  _post_optimizer.py  _prescribed_isomer_enumerator.py  _ring_conformer_templates.py  _rotamer_diversity.py  _symmetry_detection.py  _system_classifier.py  (+106 more)
delfin/agent/: AGENT_USER_GUIDE.txt  __init__.py  agent_metrics.py  agent_tasks.py  api_client.py  audit_log.py  bash_jobs.py  benchmark.py  benchmark_runner.py  briefing.py  bug_report.py  bug_watcher.py  cli.py  code_nav.py  context_distiller.py  context_tracker.py  credentials.py  editblock.py  engine.py  eval_loop.py  failure_log.py  generate_fact_tasks.py  hooks.py  hooks_editor.py  image_input.py  job_fix.py  job_monitor.py  kit_confirm.py  kit_settings.py  learned_profiles.json  manual_extractor.py  mcp_client.py  mcp_editor.py  memory_distill.py  memory_store.py  model_capabilities.py  model_profiles.py  model_routing.py  notebook_tools.py  notify.py  (+29 more)
delfin/agents/: README.md  REPORT_README.md  __init__.py  base_provider.py  claude_provider.py  cli_setup.py  control_assistant.py  control_examples.py  control_schemas.py  control_template.py  (+7 more)
docs/: ARCHITECTURE.md  FFFREE_ARYL_RING_SIZE.md  FIX_SP2N_PLANARIZE_2026_06_19.md  PLANAR_MER_CN5_SPEC.md  REPRODUCTION_MANIFEST.md  RETRY_LOGIC.md  SETTINGS_AND_SETUP.md  SHIP_CANDIDATE_SPEC.md  SPEC_AROM_PLANARIZE_2026_06_19.md  USER_MANUAL.md  delfin-grip-cli.md  job_prioritization.md  methodology.md
examples/: lsf_submit_example.sh
forensik/: analyze_isocov.py  analyze_missing.py  aromatic_bond_trace.md  aromatic_fix_summary.md  dump_csv.py  phaseAB_report.txt  phaseCD_missing.txt  phaseC_traces.txt  trace_failures.py
iters/: ANOMALY_PATTERN_ATLAS_2026_06_04.md  BAUSTEIN5_SPEC.md  BAUSTEIN6_MASTERPLAN.md  CCDC_API_FULL_EXPLOITATION_2026_06_04.md  CCDC_DEEP_OPTIMIZATION_2026_06_04.md  CCDC_FULL_EXTRACTION_2026_06_05.md  CCDC_REFERENCE_DATASET_2026_06_04.md  CHELATE_BITE_PICK_BETTER_2026_06_04.md  FULL_CCDC_XRD_RECALL_2026_06_04.md  GRIP_LOSS_TERM_DIAGNOSTIC_2026_06_04.md  HH_CLASH_AUDIT_AND_FIX_2026_06_04.md  MODULE_VERIFICATION_NIGHT_2026_06_04.md  MOGUL_V3_AUTO_TUNING_2026_06_04.md  MULTI_METAL_CLUSTER_PHASE_B_2026_06_03.md  MULTI_METAL_PHASE_B_validation.json  MULTI_METAL_PHASE_B_validation.py  PROVABILITY_TEST_100_2026_06_03.md  REALISM_WEIGHT_OPTIMIZATION_2026_06_04.md  SP3_H_FIX_2026_06_04.md  TOPOLOGY_HEALING_2026_06_04.md  XRD_RECALL_METRIC_2026_06_04.md
literature/: .gitignore  README.md
scripts/: MISSION_C1_HEAL_FORENSIK.md  MISSION_D1_HEAL_FORENSIK.md  anomaly_atlas_from_cache.py  anomaly_pattern_atlas.py  bug_census.py  check_delfin_orca.sh  classify_bug_pattern.py  coord_donor_angle_ruler.py  dft_rmsd_comparator.py  dft_rmsd_pool_fallback.py  dft_rmsd_report.py  diag_grip_hits_TM.py  diag_post_polish_geometry.py  diagnostic_common.py  extract_worst_files.py  forensik_angle_class_anomalies.py  forensik_donor_cone_distribution.py  grace_benchmark.py  grace_benchmark_200_curation.py  grace_benchmark_200_runner.py  grace_determinism_proof.py  grace_scaling_plot.py  grip_build_md_bond_order_supplement.py  grip_build_mogul_lib_v5_TM_ligand_internals.py  grip_build_mogul_lib_v6_cod.py  grip_lm_benchmark.py  grip_v5_validation.py  grip_v6_cross_validate.py  grip_v6_cross_validate_breakdown.py  install_delfin_bwu.sh  iter_gate_with_diagnostics.py  license_guard.py  mogul_v3_threshold_optimization.py  mogul_v3_vs_v4_compare.py  mogul_v4_forensik.py  overnight_breadcrumb_smoke.py  overnight_module_verify.py  pre-commit-hook.sh  provability_test.py  provability_test_library.py  (+26 more)
scripts_local/: optimize_realism_weights.py
staged_patches/: measure_xrd_recall_on_archives.py  pick_cleaning_sample.py  pool_evaluator_xrd_recall_hook.patch  xrd_recall_before_after.py
tests/: conftest.py  test_agent_cli.py  test_agent_engine.py  test_agent_metrics.py  test_agent_prompt_loader.py  test_agent_provider_profile.py  test_agent_repo_safety.py  test_agent_safety_contract.py  test_agent_sandbox.py  test_agent_session_store.py  test_agent_skills.py  test_agent_software_build_e2e.py  test_agent_workspace_from_launch.py  test_alkyl_donor_strict.py  test_all_features_contracts.py  test_ambidentate_kappa_enum.py  test_amide_vsepr_f24_plane.py  test_amide_vsepr_template.py  test_api.py  test_api_client_cli.py  test_applications_library.py  test_apply_patch_gate.py  test_approval_diff_preview.py  test_arom_planarize.py  test_aromatic_bond_fix.py  test_ask_user_question.py  test_assemble_via_mogul.py  test_auto_compact.py  test_auto_diagnostic.py  test_auto_verify.py  test_b00f9a0_5severe_surgical_fix.py  test_b5_phase_a5_smart.py  test_b5_rigid_h.py  test_b5_safety_gates.py  test_b5_stage2_ring_aware.py  test_b6_rigid_h.py  test_backend_local.py  test_backend_slurm.py  test_bash_jobs_and_notebook.py  test_bash_status_wait.py  (+386 more)
(+618 files in other folders)
