[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delfin-complat"
version = "1.1.0"
description = "Automated ORCA, xTB and CREST workflow for predicting preferred spin states and associated redox potentials."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.12"
authors = [{ name = "Maximilian Hartmann" }]
license = "LGPL-3.0-or-later"
urls = { "Homepage" = "https://github.com/ComPlat/DELFIN", "Repository" = "https://github.com/ComPlat/DELFIN" }
keywords = ["quantum-chemistry", "orca", "xtb", "redox", "spin-state", "workflow", "dashboard", "smiles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "mendeleev>=0.14,<1.0",
    "psutil",
    "ase>=3.22.0",
    "numpy>=1.26,<2",
    "scipy>=1.6.0",
    "matplotlib>=3.3.4",
    "rdkit>=2023.3.1",
    "stk",
    "openbabel-wheel>=3.1.0",
    "ipywidgets>=8.0",
    "py3Dmol>=2.0.4",
    "python-docx>=0.8.11",
    "pymol-open-source",
    "voila>=0.5",
    "Pillow",
    "mammoth",
    "pexpect",
    "umap-learn",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "ruff",
]

[project.scripts]
delfin = "delfin.main:main"
delfin_ESD = "delfin.cli_esd_report:main"
delfin_IR = "delfin.cli_ir_report:main"
delfin-json = "delfin.cli_delfin_collect:main"
delfin-build = "delfin.build_up_complex:main"
delfin-guppy = "delfin.guppy_sampling:main"
delfin-voila = "delfin.cli_voila:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["delfin*"]

[tool.setuptools.package-data]
"delfin.notebooks" = ["*.ipynb"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501", # handled by black (line length)
]

[tool.ruff.lint.isort]
known-first-party = ["delfin"]
